--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,17 @@ body {
     width: 800px;
 }
 
+.select{
+    background: #FFF;
+    border: 3px solid black;
+    border-radius: 10px;
+}
+
+.option{
+    border: 3px solid black;
+    border-radius: 10px;
+}
+
 .loader {
     margin-left: 6px;
     border: 4px solid #f3f3f3; /* Light grey */
